@@ -1,5 +1,9 @@
 2014-09-11  Chris Moller  <moller@mollerware.com>
 
+	* options.c (]): Added a --version flag.
+
+	* aplio.c (apl_read_plot_pipe): dded embedded plot capability.
+
 	* apl.c (apl_spawn): Added -f option to pass a script to APL.
 
 2014-09-09  Chris Moller  <moller@mollerware.com>
